# supabase-python-seeder

./: .example.env  .gitignore  README.md  config.py  extract_data.py  pyproject.toml  seeder.ipynb  utils.py
.github/ISSUE_TEMPLATE/: task.yaml
supabase/: config.toml
supabase/migrations/: 20250730132339_add_tourism_place_table.sql  20250731121554_add_user_place_rating_table.sql  20250731130402_add_tour_package.sql
supabase/seeder/: place.sql  tour_package.sql  user.sql  user_place_rating.sql
test/: test_dob_utils.py
